--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 			font-size: .875rem;
 		}
 		img {
-			width: 200px;
-			height: 200px;
+			width: 50%;
 		}
 		div{
 			display: inline-block;
@@ -111,13 +110,11 @@
 		}
 
 		.ability {
-			width: 75px;
-			height: 75px;
+			width: 20%;
 		}
 
 		.role {
-			width: 125px;
-			height: 125px;
+			width: 25%;
 		}
 		.header{
 			font-family: 'VALORANT', sans-serif;                                 
